guardando estilos css

--- a/backend/source/views/404.ejs
+++ b/backend/source/views/404.ejs
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
-   <%- include('../partials/head.ejs') %>
+   <%- include('./partials/head.ejs') %>
    <link rel="stylesheet" href="/css/404.css">
 </head>
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('./partials/header.ejs') %>
     <main>
         <p class="title">404 ERROR</p>
         <img src="./images/pc-dead.png" alt="" class="pc-dead">
@@ -13,7 +13,7 @@
     </main>
 
     <footer>
-        <%- include('../partials/footer.ejs') %>
+        <%- include('./partials/footer.ejs') %>
     </footer>
 </body>
 </html>
