--- a/backend/source/views/carrito.ejs
+++ b/backend/source/views/carrito.ejs
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
-    <%- include('../partials/head.ejs') %>
+    <%- include('./partials/head.ejs') %>
     <link rel="stylesheet" href="/css/carrito.css">
 </head>
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('./partials/header.ejs') %>
     
     <main class="container-allMain-cart">
         <section id="header-cart">
@@ -43,7 +43,7 @@
                                     </select>
                                     <button type="reset" class="trash-button"><i class="fa-sharp fa-solid fa-trash"></i></button>
                                 </form>
-                                <p class="product-price"> $422 </p>
+                                <p class="product-price"> $3499.2 </p>
                             </div>
                         </div>
                     </div>
@@ -55,22 +55,21 @@
                 <img src="/images/candado.png" alt="">
                 <h2>Pagos faciles y seguro</h2>
             </div>
-            <div class="methods img">
+            <div class="methods-img">
                 <img src="/images/visa.png" alt="">
                 <img src="/images/paypal.png" alt="">
                 <img src="/images/bitcoin.png" alt="">
-                <p>and 10+ more</p>
             </div>
         </section>
 
         <section id="buy-product">
             <div id="price">
                 <p>Precio total</p>
-                <p>$244</p>
+                <p>$3499.2</p>
             </div>
             <a href="/paginaEnConstruccion" class="crear">Continuar con el pago<i class="fa-solid fa-cart-shopping"></i></a>
         </section>
     </main>
-    <%- include('../partials/footer.ejs') %>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
