--- a/backend/source/views/partials/footer.ejs
+++ b/backend/source/views/partials/footer.ejs
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <a href="https://api.whatsapp.com/send?=phone=1234567891" target="_blank">
+    <a href="https://api.whatsapp.com/send?=phone=1234567891" class="btn-wsp" target="_blank">
         <i class="fa-brands fa-whatsapp" id="wpp"></i>
     </a>
 
