--- a/backend/source/views/partials/header.ejs
+++ b/backend/source/views/partials/header.ejs
@@ -70,7 +70,7 @@
                 </div> 
                     
                 <div class="category-container">
-                    <li><a href="#" id="category2"><i class="fa-solid fa-glass-empty"></i><p class="name-category">Bebidas</p></a></li>
+                    <li><a href="#" id="category2"><i class="fa-solid fa-bottle-water"></i><p class="name-category">Bebidas</p></a></li>
                 </div>  
                     
                 <div class="buscar">
