--- a/backend/source/views/create.ejs
+++ b/backend/source/views/create.ejs
@@ -1,10 +1,10 @@
 <head>
-    <%- include('../partials/head.ejs') %>
+    <%- include('./partials/head.ejs') %>
     <link rel="stylesheet" href="../css/create.css">
 </head>
 
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('./partials/header.ejs') %>
     
     <main>
 
@@ -82,6 +82,6 @@
     </main>
 
     <footer class="main-footer">
-        <%- include('../partials/footer.ejs') %>
+        <%- include('./partials/footer.ejs') %>
     </footer>        
 </body>
