--- a/backend/source/views/profile.ejs
+++ b/backend/source/views/profile.ejs
@@ -12,7 +12,9 @@
         
         <section class="section-userDetail">
             <article class="container-user">
-                <picture><img src="/images/avatars/<%= userLogged.image %>" alt="fotDePerfil" class="img-user" /></picture>
+               <picture>
+                    <img src="/images/avatars/<%= userLogged.image %>" alt="fotoDePerfil" id="fotoDePerfil" class="img-user" />
+               </picture>
 
                 <article class="userDetail-container">
                     <p class="description-user" id="user-name">
