--- a/backend/public/css/userDetail.css
+++ b/backend/public/css/userDetail.css
@@ -1,1 +1,46 @@
+.section-userDeatil{
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 0px;
+}
 
+#id-user{
+    color: white;
+    padding: 1rem;
+}
+
+.img-user{
+    width: 8rem;
+    height: 8rem;
+    border: 1px solid #d68383;
+    border-radius: 50%;
+}
+
+.container-user{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+}
+
+.description-user{
+    padding: 1rem 0;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    padding-left: 1rem;
+}
+
+#birthDay-user{
+    color: white;
+    margin: 3rem auto 2rem;
+    width: 80%;
+}
+
+@media screen and(min-width:1024px) {
+    .section-userDeatil{
+        flex-direction: row;
+    }
+    #birthDay-user{
+        width: 50%;
+    }
+}
