--- a/backend/source/views/edit.ejs
+++ b/backend/source/views/edit.ejs
@@ -26,8 +26,10 @@
                 <div id="container-image">
                     <img src="/images/<%= product.image %>" class="image-edit" alt="">
                     
-                    <fieldset id="image">Subir imagen</fieldset>
-                    <input type="file" name="image" id="image">
+                    <fieldset id="fsImage" class="text-area">
+                        <label for="image">Subir imagen</label>
+                        <input type="file" name="image" id="image">
+                    </fieldset>
                     
                 </div>
                 
