--- a/backend/source/views/users/userDetail.ejs
+++ b/backend/source/views/users/userDetail.ejs
@@ -21,6 +21,7 @@
                 </div>
             </div>
             <div id="birthDay-user">
+                <h2 id="birthDay-container">Año de nacimiento</h2>
                 <p id="birthDay"><%= user.birthDay %></p>
             </div> 
         </section>
