--- a/backend/public/css/footer.css
+++ b/backend/public/css/footer.css
@@ -95,6 +95,9 @@ footer{
     box-shadow: 0 1px 10px rgba(0,0,0,0.3);
     z-index: 100;
     transition: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .btn-wsp:hover{
     text-decoration: none;
