--- a/backend/public/css/header.css
+++ b/backend/public/css/header.css
@@ -43,9 +43,9 @@ header{
     align-content: center;
     gap: 1.3rem;
     flex-direction: column;
-    background-color: chartreuse;
+    background-color:rgb(135, 135, 135);
     color: white;
-    border-bottom: 1px solid chartreuse;
+    border-bottom: 1px solid rgb(42, 42, 42);
     z-index: 0;
     padding: 1rem;
     transition: all 0.3s ease-out;
@@ -65,7 +65,7 @@ header{
 }
 
 #links-hb a {
-    color: red;
+    color: rgb(0, 0, 0);
     border-radius: 50%;
     height: 2rem;
     width: 2rem;
